make functions work